Fix for checkboxes alignment. And fix for radiobuttons in IE.

--- a/src/global/less/corporate-ui/mixins.less
+++ b/src/global/less/corporate-ui/mixins.less
@@ -85,11 +85,7 @@
     display: inline-block;
     border: thin solid @radio-check-11;
     border-radius: 30px;
-    // -moz-transform: scale(0.8);
-    // -ms-transform: scale(0.9);
-    // -moz-transform-origin: 0 0;
-    // zoom: 0.8;
-    vertical-align: middle;
+    vertical-align: text-bottom;
 
     .app & {
       width: 18px;
@@ -103,6 +99,7 @@
       height: 100%;
       border-radius: inherit;
       border: 3px solid @radio-check-1;
+      margin-top:0px;
     }
     &:hover:before {
       border-color:@radio-check-5;
@@ -151,7 +148,6 @@
   width: 26px;
   position: static;
   display: inline-block;
-  vertical-align: text-bottom;
 
   .checkbox & {
     position: static;
@@ -162,7 +158,6 @@
     width: 20px;
     position: static;
     display: inline-block;
-    vertical-align: text-bottom;
   }
 
   + span {
@@ -170,7 +165,6 @@
     display: inline-block;
     vertical-align: middle;
     line-height: 1;
-    margin-right: 3px;
     cursor: pointer;
 
     .app & {
@@ -188,7 +182,7 @@
       -moz-transform: scale(0.8);
       -ms-transform: scale(0.9);
       -moz-transform-origin: 0 0;
-      margin-bottom: 3px;
+       margin: 0px;
       
       zoom: 0.8;
       .app & {
@@ -200,6 +194,7 @@
 
   &:hover + span:before {
     background-color: @radio-check-2-checkbox;
+    margin: 0px;
   }
 
   &:checked + span:before {
@@ -210,11 +205,13 @@
     background-repeat: no-repeat;
     border-color: @radio-check-4-checkbox;
     background-color: @radio-check-4-checkbox;
+    margin: 0px;
 
     .app & {
       font-size: 11px;
       line-height: 12px;
       background-size: 15px;
+      margin: 0px;
     }
   }
 
